--- a/MPChartLib/build.gradle
+++ b/MPChartLib/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+        checkReleaseBuilds false
+    }
     testOptions {
         unitTests.returnDefaultValues = true // this prevents "not mocked" error
     }
